test/libsolidity/syntaxTests/abstract/library.sol
abstract library A { }
// ----
// ParserError: (0-8): Only contracts can be abstract.
